--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
     <hr />
 
-    <form action="mailto:emilio17mc@gmail.com" method="post" enctype="text/plain">
+    <form action="index.html" method="post" enctype="text/plain">
       <label for="">Your Name: </label>
       <input type="text" name="yourName" id="" /> <br />
 
