--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
     <hr />
 
     <a href="music.html">Hardwell's Music</a>
-    <a href="contact.html">Contact</a>
+    <!-- <a href="contact.html">Contact</a> -->
   </body>
 </html>
